# p2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTS.md  WARPREADME.md  ai_studio_code.html  docker-compose.yml  entrypoint.sh  manage.py  plan.md  pyproject.toml  warp-get-2026-04-02[202514]-UJVN.json.zst
.kiro/specs/p2-modernization/: .config.kiro  design.md  requirements.md  tasks.md
deploy/: nginx-host.conf  nginx.conf
docs/: index.html  script.js  style.css
docs/components/: architecture.md
operator/helm-charts/p2/: values.yaml
operator/helm-charts/p2/templates/: configmap.yaml  web-deployment.yaml  worker-deployment.yaml
p2/api/: endpoints.py  forms.py  models.py  ninja_api.py  schemas.py  urls.py
p2/api/migrations/: 0001_initial.py  0003_apikey_secret_key_encrypted.py  0004_data_encrypt_secret_keys.py  0005_alter_apikey_access_key_alter_apikey_id.py
p2/auth/: __init__.py  urls.py  views.py
p2/components/expire/: controller.py  signals.py  tasks.py
p2/components/image/: controller.py  signals.py
p2/components/public_access/: controller.py  signals.py  tests.py
p2/components/quota/: controller.py
p2/components/replication/: controller.py  signals.py  tasks.py
p2/core/: acl.py  asgi.py  constants.py  consumers.py  events.py  forms.py  http.py  middleware.py  models.py  prefix_helper.py  rsgi.py  settings.py  signals.py  storage_path.py  tasks.py  telemetry.py  volume_stats.py  worker.py
p2/core/api/: endpoints.py  schemas.py  serializers.py  viewsets.py
p2/core/management/commands/: grpc.py  recalculate_space_used.py  web.py  worker.py
p2/core/migrations/: 0001_initial.py  0002_default_admin.py  0003_volume_object_count.py  0011_create_default_user.py  0020_create_default_storage_volume.py  0025_volume_space_used_bytes_public_read.py  0026_jsonfield_to_django_models.py  0027_volumeacl.py  0028_data_backfill_space_used.py  0029_data_public_read.py  0030_data_guardian_to_volumeacl.py  0031_data_remove_old_hashes.py  0032_blob_prefix_index.py
p2/core/storages/: base.py  null.py
p2/grpc/protos/: serve_pb2.py  serve_pb2_grpc.py
p2/lib/: config.py  fields.py  forms.py  models.py  sentry.py  shortcuts.py  views.py
p2/log/: adaptor.py  models.py  tasks.py
p2/log/migrations/: 0001_initial.py  0007_jsonfield_to_django_models.py
p2/root/: settings.py  urls.py  wsgi.py
p2/s3/: asgi_handler.py  cache.py  checksum.py  constants.py  cors.py  engine.py  errors.py  explicit_urls.py  meta_write.py  middleware.py  policy.py  presign.py  rsgi_handler.py  tasks.py  urls.py  utils.py
p2/s3/auth/: aws_v4.py  base.py
p2/s3/checksum_ext/: Cargo.toml  build.sh
p2/s3/checksum_ext/src/: lib.rs
p2/s3/meta_ext/: Cargo.toml  build.sh
p2/s3/meta_ext/src/: lib.rs
p2/s3/rust_ext/: Cargo.toml  build.sh
p2/s3/rust_ext/.cargo/: config.toml
p2/s3/rust_ext/src/: lib.rs
p2/s3/tests/: bench.py  test_auth.py  test_buckets.py  test_checksum.py  test_conditional.py  test_integration.py  test_multipart.py  test_new_features.py  test_objects.py  test_policy.py  test_unit.py  utils.py
p2/s3/views/: buckets.py  common.py  get.py  multipart.py  objects.py  presign.py
p2/serve/: grpc.py  models.py
p2/serve/api/: endpoints.py  schemas.py
p2/serve/migrations/: 0001_initial.py
p2/storage/local/: controller.py
p2/storage/s3/: controller.py
p2/ui/: context_processors.py  stats.py  urls.py
p2/ui/static/p2/js/: p2.js
p2/ui/templates/base/: base.html  skeleton.html
p2/ui/templates/errors/: 500.html
p2/ui/templates/general/: index.html
p2/ui/templates/p2_core/: blob_detail.html  blob_detail_audio.html  blob_detail_fallback.html  blob_detail_image.html  blob_detail_pdf.html  blob_detail_video.html  blob_list.html  volume_detail.html
p2/ui/templates/registration/: login.html
p2/ui/templates/search/: results.html
p2/ui/templatetags/: p2_ui.py
p2/ui/views/: errors.py  general.py
p2/ui/views/api/: key.py
p2/ui/views/core/: blob.py  component.py  storage.py  volume.py
p2/ui/views/iam/: users.py
p2/ui/views/log/: adaptor.py  record.py
p2/ui/views/serve/: rule.py
scripts/: build_rust_ext.sh  run_without_docker.sh  setup.sh
