[package]
name = "p2_s3_checksum"
version = "0.1.0"
edition = "2021"

[lib]
name = "p2_s3_checksum"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
crc32fast = "1"
crc32c = "0.6"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
