[package]
name = "p2_s3_checksum"
version = "0.1.0"
edition = "2021"

[lib]
name = "p2_s3_checksum"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
crc32fast = "1"
crc32c = "0.6"
# sha2/asm enables AVX2 assembly backend (sha256 ~3x faster on AVX2 CPUs)
sha2 = { version = "0.10", features = ["asm"] }
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
