[package]
name = "p2_s3_crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "p2_s3_crypto"
crate-type = ["cdylib"]

[dependencies]
# pyo3: Python bindings for Rust — zero-overhead FFI
pyo3 = { version = "0.23", features = ["extension-module"] }
# hmac + sha2: pure-Rust, constant-time HMAC-SHA256
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# md5: fast MD5 for ETag computation
md-5 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
